package logistics;

public class SeaLogistics extends Logistics{
    @Override
    protected Transport createTransport() {
        return new Ship();
    }
}
